Gradle 7, Java 16